--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- SEO Enhancements: Optimized Title, Meta Description, and Keywords -->
-  <title>Al Massria Al Emaratia - Global Trade, Import & Export Solutions</title>
+  <title>Al Masriya Al Emaratiya - Global Trade, Import & Export Solutions</title>
   <meta name="description" content="Al Massria Al Emaratia provides integrated solutions for import, export, and commercial agencies in Egypt and UAE. We connect businesses with global markets." />
   <meta name="keywords" content="Al Massria Al Emaratia, import, export, commercial agencies, global trade, Egypt, UAE, trade solutions, shipping, logistics, international markets" />
   <meta name="author" content="Al Massria Al Emaratia" />
@@ -334,7 +334,7 @@
         <a href="index-en.html">
           <!-- Using a placeholder image for the logo. You should replace this with a stable, professional logo. -->
           <img src="https://i.postimg.cc/C5SkqykS/IMG-20241008-WA0000-removebg-preview.png" alt="Al Massria Al Emaratia Logo" class="company-logo-header"> 
-          Al Massria Al Emaratia
+          Al Masriya Al Emaratiya
         </a>
       </div>
       <ul class="nav-links">
@@ -503,7 +503,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; <span id="current-year-footer"></span> Al Massria Al Emaratia. All rights reserved.</p>
+        <p>&copy; <span id="current-year-footer"></span> Al Masriya Al Emaratiya. All rights reserved.</p>
         <div class="footer-legal-links">
           <a href="privacy.html">Privacy Policy</a> | 
           <a href="terms.html">Terms & Conditions</a> | 
