--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <!-- SEO Enhancements: Optimized Title, Meta Description, and Keywords -->
   <title>Al Masriya Al Emaratiya - Global Trade, Import & Export Solutions</title>
   <meta name="description" content="Al Massria Al Emaratia provides integrated solutions for import, export, and commercial agencies in Egypt and UAE. We connect businesses with global markets." />
-  <meta name="keywords" content="Al Massria Al Emaratia, import, export, commercial agencies, global trade, Egypt, UAE, trade solutions, shipping, logistics, international markets" />
-  <meta name="author" content="Al Massria Al Emaratia" />
+  <meta name="keywords" content="Al Masriya Al Emaratiya, import, export, commercial agencies, global trade, Egypt, UAE, trade solutions, shipping, logistics, international markets" />
+  <meta name="author" content="Al Masriya Al Emaratiya" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://www.egy-uae.com/index-en.html" /> <!-- Updated canonical for English page -->
+  <link rel="canonical" href="https://www.egy-uae.com/index.html" /> <!-- Updated canonical for English page -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
@@ -331,7 +331,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="index-en.html">
+        <a href="index.html">
           <!-- Using a placeholder image for the logo. You should replace this with a stable, professional logo. -->
           <img src="https://i.postimg.cc/C5SkqykS/IMG-20241008-WA0000-removebg-preview.png" alt="Al Massria Al Emaratia Logo" class="company-logo-header"> 
           Al Masriya Al Emaratiya
