--- a/home-ar.html
+++ b/home-ar.html
@@ -331,7 +331,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="index.html">
+        <a href="home-ar.html">
           <!-- استخدام صورة شعار للموقع. يجب استبدالها بشعار احترافي ثابت. -->
           <img src="https://i.postimg.cc/C5SkqykS/IMG-20241008-WA0000-removebg-preview.png" alt="شعار المصرية الإماراتية" class="company-logo-header"> 
           المصرية الإماراتية
