--- a/home-ar.html
+++ b/home-ar.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="المصرية الإماراتية, استيراد, تصدير, وكالات تجارية, تجارة عالمية, مصر, الإمارات, حلول تجارية, شحن, لوجستيات, أسواق دولية" />
   <meta name="author" content="المصرية الإماراتية" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://www.egy-uae.com/" /> 
+  <link rel="canonical" href="https://www.egy-uae.com/home-ar.html" /> 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
