--- a/about-ar.html
+++ b/about-ar.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="تعرف على المزيد عن المصرية الإماراتية، الرائدة عالميًا في الاستيراد والتصدير والوكالات التجارية.">
   <meta property="og:image" content="https://images.unsplash.com/photo-1605902711622-cfb43c4437d7?w=800">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.egy-uae.com/about.html">
+  <meta property="og:url" content="https://www.egy-uae.com/home-ar.html">
 
   <!-- الأيقونات والخطوط -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -191,7 +191,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="index.html">
+        <a href="home-ar.html">
           <!-- استخدام صورة شعار للموقع. يجب استبدالها بشعار احترافي ثابت. -->
           <img src="https://i.postimg.cc/C5SkqykS/IMG-20241008-WA0000-removebg-preview.png" alt="شعار المصرية الإماراتية" class="company-logo-header"> 
           المصرية الإماراتية
