--- a/faqs-ar.html
+++ b/faqs-ar.html
@@ -177,7 +177,7 @@
   <header>
     <div class="container">
       <h1 class="logo">
-        <a href="index-ar.html">
+        <a href="home-ar.html">
             <img src="https://i.postimg.cc/C5SkqykS/IMG-20241008-WA0000-removebg-preview.png" alt="شعار المصرية الإماراتية" class="company-logo-header">
             المصرية الإماراتية
         </a>
