--- a/faqs.html
+++ b/faqs.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content="https://images.unsplash.com/photo-1549646467-3c9f2b8f3a3e?w=800"> <!-- Suitable image for FAQs -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.egy-uae.com/faqs.html">
-  <meta property="og:site_name" content="Egyptian Emirati">
+  <meta property="og:site_name" content="Al Masriya Al Emaratiya">
 
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
@@ -192,7 +192,7 @@
         </ul>
       </nav>
       <div class="language-switcher">
-        <a href="faqs-ar.html" aria-label="Arabic Language"><i class="fas fa-globe"></i> Arabic</a>
+        <a href="faqs-ar.html" aria-label="Arabic Language"><i class="fas fa-globe"></i> العربية</a>
       </div>
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </div>
