--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content="https://images.unsplash.com/photo-1529070538774-1843cb3265df?auto=format&fit=crop&w=1600&q=80">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.egy-uae.com/services.html">
-  <meta property="og:site_name" content="Egyptian Emirati">
+  <meta property="og:site_name" content="Al Masriya Al Emaratiya">
 
   <!-- Icons & Fonts -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -223,7 +223,7 @@
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
       <div class="language-switcher">
-        <a href="services-ar.html" aria-label="Arabic Language"><i class="fas fa-globe"></i> Arabic</a>
+        <a href="services-ar.html" aria-label="Arabic Language"><i class="fas fa-globe"></i> العربية</a>
       </div>
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </nav>
