--- a/services-ar.html
+++ b/services-ar.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="نقدم حلولاً تجارية ولوجستية متكاملة لضمان نجاح عملك في الأسواق العالمية. استيراد، تصدير، وكالات، استشارات، وتدريب.">
   <meta property="og:image" content="https://images.unsplash.com/photo-1529070538774-1843cb3265df?auto=format&fit=crop&w=1600&q=80">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.egy-uae.com/services.html">
+  <meta property="og:url" content="https://www.egy-uae.com/services-ar.html">
   <meta property="og:site_name" content="المصرية الإماراتية">
 
   <!-- أيقونات وخطوط -->
@@ -202,7 +202,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="index-ar.html">
+        <a href="home-ar.html">
           <img src="https://i.postimg.cc/C5SkqykS/IMG-20241008-WA0000-removebg-preview.png" alt="شعار المصرية الإماراتية" class="company-logo-header">
           المصرية الإماراتية
         </a>
